<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">JieLi OTA</string>
    <string name="company_name">ZhuHai JieLi Technology co., LTD</string>
    <string name="copy_right">Copyright @2021&#8211;2025 ZhuHai JieLi Technology co., LTD All Rights Reserved</string>
    <string name="sure">Sure</string>
    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="privacy_policy_dialog_title">User Agreement And Privacy Policy</string>
    <string name="privacy_policy_dialog_content">\t\tWelcome to %1$s!\nWe attach great importance to your privacy and personal information protection. Before you use the \"%2$s\" service, please be sure to carefully read #### and ****, and fully understand the terms of the agreement. \n\t\tIf you agree and accept this notice and the relevant agreement, please click Agree to start accepting our services.</string>
    <string name="user_agreement_name">User Agreement</string>
    <string name="privacy_policy_name">Privacy Policy</string>
    <string name="agree_policy">Agree</string>
    <string name="disagree_and_exit">Disagree And Exit</string>
    <string name="bt_connecting">Connecting&#8230;</string>
    <string name="bt_connect_disconnected">connection dropped</string>
    <string name="bt_connect_successed">Connect Success</string>
    <string name="bt_connect_failed">Connect failed</string>
    <string name="bt_not_connect_device">Not device connected!</string>
    <string name="bt_bluetooth_close">Bluetooth is off</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_disconnected">Not connected</string>
    <string name="device_must_mandatory_upgrade">Device must be forced to upgrade</string>
    <string name="device_type_unknown">Unknown Device</string>
    <string name="device_type_classic">Classic Device</string>
    <string name="device_type_ble">Ble Device</string>
    <string name="device_type_dual_mode">Dual Mode</string>
    <string name="ota_complete">Upgrade is complete</string>
    <string name="ota_finish">Upgrade is over</string>
    <string name="ota_upgrading">Be updating&#8230;</string>
    <string name="ota_upgrade_cancel">Upgrade cancelled</string>
    <string name="ota_upgrade_not_started">Upgrade not started</string>
    <string name="ota_checking_upgrade_file">Checking the upgrade file</string>
    <string name="ota_upgrade_failed">Upgrade failed: %s</string>
    <string name="ota_check_file">Verification File</string>
    <string name="update_failed">Update failed</string>
    <string name="permission">Permission</string>
    <string name="open_gpg_tip">GPS function is required to operate nearby Bluetooth devices. Please turn on the location service to continue.</string>
    <string name="open_bluetooth_tip">Bluetooth function is required to operate nearby Bluetooth devices. Please turn on Bluetooth to continue.</string>
    <string name="grant_bluetooth_permission">Bluetooth permissions are required to operate nearby Bluetooth devices. Please grant them before continuing.</string>
    <string name="grant_location_permission">Location permission is required to operate nearby Bluetooth devices. Please grant it before continuing.</string>
    <string name="grant_external_storage_permission">Adding files requires storage permissions, please grant them before continuing.</string>
    <string name="connect">Connect</string>
    <string name="upgrade">Upgrade</string>
    <string name="setting">Setting</string>
    <string name="double_tap_to_exit">Press again to exit the application</string>
    <string name="broadcast_box">Broadcast box</string>
    <string name="normal_mode">Normal mode</string>
    <string name="scan_tip">Device list</string>
    <string name="ble_filter">Filter name</string>
    <string name="device_keyword">Device name keyword</string>
    <string name="scaning_tip">Searching&#8230;</string>
    <string name="tab_upgrade">Device upgrade</string>
    <string name="tab_scan">Device connection</string>
    <string name="device_name">Device Name:</string>
    <string name="device_addr">Device Address:</string>
    <string name="device_type">Device type:</string>
    <string name="device_status">Device status:</string>
    <string name="file_selection">File selection</string>
    <string name="ota_please_chose_file">Please select upgrade file</string>
    <string name="none_file_tips">Put the upgrade file [xxx.ufw or xxx.bfu] in the storage of the mobile phone.</string>
    <string name="ota_progress">progress</string>
    <string name="local_add">Local add</string>
    <string name="computer_transmission">Computer transmission</string>
    <string name="scan_download">Scan to download</string>
    <string name="save_file">Save File</string>
    <string name="need_mandatory_upgrade_no_auto_test">Automatic test is not allowed for forced upgrade of equipment</string>
    <string name="mandatory_upgrade_no_auto_test_recorvery">The automatic test is not allowed for the forced upgrade of the device. The device is being restored to normal first</string>
    <string name="service_already_open">Service started</string>
    <string name="keep_same_wifi">Please make sure to connect your phone and computer under the same Wi-Fi，or connect to your phone\'s hotspot</string>
    <string name="pack_up">Close</string>
    <string name="copy_the_address">Copy address</string>
    <string name="err_no_browser">Can\'t open browser</string>
    <string name="err_no_app">No app installed to open this file</string>
    <string name="pref_first_use">First use SnapDrop</string>
    <string name="app_welcome">Welcome to Snapdrop</string>
    <string name="app_welcome_summary">1. Open <a href="https://snapdrop.net">snapdrop.net</a> or the Snapdrop app on any other device in your local WiFi network.\n2. Tap on the device you want to share the file(s) with.\n3. Done! The file(s) will be sent…</string>
    <string name="copy_toast">Copied, open in browser of connected device</string>
    <string name="read_file_failed">File fetch failed</string>
    <string name="please_refresh_web">Upload success, please refresh web page</string>
    <string name="upload_failed">Upload fail</string>
    <string name="ufw_format_file_tips">Please name the file in xxx.ufw format</string>
    <string name="file_name_existed">The file name already exists</string>
    <string name="update_file">Update File</string>
    <string name="log_file">Log File</string>
    <string name="connect_wifi_tips">Please connect to an available WIFI</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="photos">Photos</string>
    <string name="qrcode_into_box">QR code into the box</string>
    <string name="fail_photos_system_reason">Unable to access the photo album due to system problems</string>
    <string name="access_camera_reason">Access to the camera is required to scan the QR code to download resources.</string>
    <string name="access_photos_reason">Need to access the photo album to scan the QR code to download resources</string>
    <string name="system_set_camera">This feature requires the use of your camera. Please go to the system to set permissions</string>
    <string name="system_set_external_storage">This feature requires access to your phone\'s storage. Please go to the system to set permissions</string>
    <string name="not_found_qr">QR code not found</string>
    <string name="download_save_pending">Storing the file. Please have a little patience…</string>
    <string name="downloading_file">Downloading file</string>
    <string name="download_successful">Download successful</string>
    <string name="notification_channel_name">Download completed</string>
    <string name="save">Save</string>
    <string name="app_version">Application Version</string>
    <string name="log_file_path">Print log location</string>
    <string name="device_auth">Device certification</string>
    <string name="hid_device">HID device</string>
    <string name="custom_reconnect">Customize the connection back mode</string>
    <string name="auto_test">Automated Test OTA</string>
    <string name="test_times">Test times</string>
    <string name="fault_tolerant">Fault tolerant</string>
    <string name="fault_tolerant_count">Fault tolerant times</string>
    <string name="cur_communication_way">Current Communication Way</string>
    <string name="communication_way_ble">BLE</string>
    <string name="communication_way_spp">SPP</string>
    <string name="communication_way_gatt_over_br_edr">GATT Over BR/EDR</string>
    <string name="adjust_ble_mtu">Adjust MTU</string>
    <string name="snapdrop_trans_file">LAN transfer file</string>
    <string name="log_files">Log files</string>
    <string name="sdk_version">SDK version</string>
    <string name="about">About</string>
    <string name="config_none_change">Configuration has not changed.</string>
    <string name="settings_success_and_restart">The configuration is successful and the application will be exited</string>
    <string name="enter_develop_mode_tip">Enter developer mode, please save the settings</string>
    <string name="auto_test_range">Please be in the range of 1 to 999</string>
    <string name="open_ota_mode_switch_func">Enable upgrade mode switch function</string>
    <string name="close_ota_mode_switch_func">Disable upgrade mode switch function</string>
    <string name="input_auto_test_count_err">Please enter a value in the range [%1$d, %2$d]</string>
    <string name="save_setting">Save the Settings, you need to rastart the app to tak effect, Are you sure to restart?</string>
    <string name="restart">Restart</string>
    <string name="save_setting_failed">Failed to save settings</string>
    <string name="setting_no_save">Settings not saved, do you want to save?</string>
    <string name="ignore">Ignore</string>
    <string name="keep_bluetooth_and_net">(Keep Bluetooth and network enabled during the update)</string>
    <string name="verification_file_completed">Verification file completed, connecting device back</string>
    <string name="ota_reason">Reason：</string>
    <string name="auto_test_ota_tip">The OTA test is being automated. Please wait for the test to end</string>
    <string name="automated_test_process">Automated test process</string>
    <string name="auto_test_reconnect">The %1$dth update is complete and the device is being connected back&#8230;</string>
    <string name="auto_test_fail_reconnect">The %1$dth update is failed and the device is being connected back&#8230;</string>
    <string name="test_tasks">Test tasks</string>
    <string name="successful_tests">Successful tests</string>
    <string name="end">End</string>
    <string name="delete_all_log_files">Weather delete all log file？</string>
    <string name="delete">Delete</string>
    <string name="intent_file">A file is selected for sharing</string>
    <string name="intent_files">Files are selected for sharing</string>
    <string name="intent_content">Content is selected for sharing</string>
    <string name="error_filechooser">Cannot open file chooser</string>
    <string name="current_app_version">Current Version</string>
    <string name="user_agreement">User Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="icp_message">ICP Registration Information</string>
    <string name="feedback">Feedback</string>
    <string name="device_filter">Device filter</string>
    <string name="files">Files</string>
    <string name="feedback_type">Feedback type</string>
    <string name="problem_feedback">Problem feedback</string>
    <string name="please_input_feedback">Please enter your feedback in detail</string>
    <string name="please_input_phone">Please enter your phone number for contact</string>
    <string name="commit">Submit</string>
</resources>