<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/bg_launcher"
        android:fitsSystemWindows="true"
        tools:context=".ui.launcher.WelcomeActivity">


    <ImageView
            android:id="@+id/welcome_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher_logo"
            android:layout_centerInParent="true"
            android:translationY="-120dp"
    />


    <TextView
            android:id="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:translationY="-110dp"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_22sp"
            android:layout_below="@id/welcome_img"
            android:textColor="@color/text_white"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/copy_right"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/copy_right"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_9sp"
            android:textColor="@color/text_white"
            android:layout_marginBottom="@dimen/padding_right"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/company_name"
            android:text="@string/company_name"

            android:layout_centerHorizontal="true"
            android:layout_above="@id/copy_right"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</RelativeLayout>