<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bar"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/bt_feedback_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="38dp"
            android:background="@drawable/bg_btn_c8_blue_gray_selector"
            android:text="@string/commit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:id="@+id/ll_feedback_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_feedback_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/feedback_type"
                android:textSize="@dimen/text_16sp" />

            <TextView
                android:id="@+id/tv_feedback_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/problem_feedback"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_feedback_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/ll_feedback_type">

            <EditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/please_input_feedback"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_feedback_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:hint="@string/please_input_phone"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_feedback_text_len"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_feedback_text_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_feedback"
                tools:text="0/200" />

            <View
                android:id="@+id/view_feedback_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:background="@color/line_color"
                app:layout_constraintTop_toBottomOf="@id/tv_feedback_text_len" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/view_top_bar"
        layout="@layout/view_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>