<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/ota_upgrading"
            android:textColor="#242424"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upgrade_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:scrollbars="none"
            tools:listitem="@layout/upgrade_progress_item"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_upgrade_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/keep_bluetooth_and_net"
                android:textColor="#919191"
                android:textSize="@dimen/text_14sp"
                android:visibility="visible"/>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#F7F7F7"
                android:visibility="invisible"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tv_ok_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="#ff398bff"
                android:textSize="16sp"
                android:visibility="invisible"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>