<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ota.OtaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_bar">

        <TextView
            android:id="@+id/tv_connect_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/device_status"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_connect_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:text="@string/device_status_disconnected"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_connect_status_title"
            app:layout_constraintStart_toEndOf="@+id/tv_connect_status_title"
            app:layout_constraintTop_toTopOf="@+id/tv_connect_status_title"
            tools:text="已连接" />

        <TextView
            android:id="@+id/tv_connect_dev_type_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/device_type"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_connect_status_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_connect_status_title" />

        <TextView
            android:id="@+id/tv_connect_dev_type_vale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center_vertical"
            android:textColor="@color/gray_484848"
            android:textSize="@dimen/text_15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_connect_dev_type_key"
            app:layout_constraintStart_toEndOf="@+id/tv_connect_dev_type_key"
            app:layout_constraintTop_toTopOf="@+id/tv_connect_dev_type_key"
            tools:text="BLE设备" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_file_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_card_white_8_shape"
            app:layout_constraintBottom_toTopOf="@+id/cl_bottom"
            app:layout_constraintTop_toBottomOf="@+id/tv_connect_dev_type_key"
            app:layout_constraintVertical_weight="3">

            <ImageView
                android:id="@+id/ibtn_file_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_add_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_file_selection"
                app:layout_constraintBottom_toBottomOf="@+id/tv_file_selection"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_file_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/file_selection"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_file_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/tv_file_selection"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:itemCount="20"
                tools:listitem="@layout/item_file_list" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_file_list"
            app:layout_constraintVertical_weight="2">

            <Button
                android:id="@+id/btn_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/dbg_btn_unenable"
                android:text="@string/upgrade"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.18"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/view_top_bar"
        layout="@layout/view_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
