<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:background="@color/black_242424"
        tools:context=".ui.dialog.DialogInputText">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:text="@string/service_already_open"
                    android:textColor="@color/blue_398BFF"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_file_transfer_tip"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="center"
                    android:text="@string/keep_same_wifi"
                    android:textColor="#A4A4A4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <ImageView
                    android:id="@+id/iv_file_transfer_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/img_file_transfer_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_file_transfer_tip" />

                <TextView
                    android:id="@+id/tv_http_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/blue_398BFF"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_file_transfer_bg"
                    tools:text="http://189.10.106.130:14578" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="19dp"
                    android:background="#EFEFEF"
                    app:layout_constraintTop_toBottomOf="@id/tv_http_url"
                    tools:layout_editor_absoluteY="156dp" />

                <TextView
                    android:id="@+id/bt_left"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/pack_up"
                    android:textColor="@color/black_242424"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/bt_right"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/bt_right"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/copy_the_address"
                    android:textColor="#398BFF"
                    android:textSize="@dimen/text_15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/bt_left"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="#EFEFEF"
                    app:layout_constraintBottom_toBottomOf="@id/bt_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view2"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>